feat(devices): search device logs by words, not patterns (CU-86agb21qt)
Follow-up to #2188, after testing deviceLogs against qa.

Drop the regex filter. Search is now words in, words out: `contains` requires
every term, `excludes` rejects lines holding one, both matched literally and
case-insensitively. Regex bought little that those two do not, and cost a
dependency to validate, a second syntax for users, and patterns the edge
proxy rejects before they reach the service. It shipped in 6.34.21 but no
client uses it yet, so removing it now is free.

Drop the field name from the @Size messages on DeviceLogFilterInput: the
GraphQL error handler already prefixes the offending field, so qa answered
"contains: contains cannot hold more than 5 terms".

Add GraphQLExceptionHandlerTest over the bean-validation branch (400 with the
violation message) and the unexpected-failure branch (500, message withheld).
That branch reached main in #2132 after 6.34.21 was cut, which is why qa
still returned INTERNAL_ERROR for six search terms when I tested.